# cuda-roadmap

./: .bazelrc  .gitignore  MODULE.bazel  README.md
cuda-cpp-programming-guide-code-samples/basic/: BUILD.bazel  hello.cu  kernel.cu  main.cpp
cuda-cpp-programming-guide-code-samples/section02/: 01_vector_add.cu  01_vector_add.cuh  BUILD.bazel  kernel_launcher.cu  kernel_launcher.cuh  main.cpp
cuda-cpp-programming-guide-code-samples/section05/: 02_occupancy_calculator.cu  02_occupancy_calculator.cuh  BUILD.bazel  main.cpp
cuda-cpp-programming-guide-code-samples/section07/: 01_function_execution_space_specifiers.cu  01_function_execution_space_specifiers.cuh  BUILD.bazel  cuda_memory_management.cuh  kernel_launcher.cu  kernel_launcher.cuh  main.cpp
cuda-cpp-programming-guide-code-samples/utilities/: BUILD.bazel  cuda_memory_management.cu  cuda_memory_management.cuh
cuda-cpp-programming-guide/01.introduction/: 1.1.the-benefits-of-using-gpus.md  1.2.general-purpose-parallel-computing-platform.md  1.3.scalable-programming-model.md  1.4.document-structure.md
cuda-cpp-programming-guide/02.programming-model/: 2.1.kernels.md  2.2.thread-hierarchy.md  2.3.memory-hierarchy.md  2.4.heterogeneous-programming.md  2.5.asynchronous-simt-programming-model.md  2.6.compute-capability.md
cuda-cpp-programming-guide/03.programming-interface/: 3.0.intro.md  3.1.compilation-with-nvcc.md  3.2.cuda-runtime.md
cuda-cpp-programming-guide/04.hardware-implementation/: 4.1.simt-architecture.md  4.2.hardware-multithreading.md
cuda-cpp-programming-guide/05.performance-guidelines/: 5.1.overall-performance-optimization-strategies.md  5.2.maximize-utilization.md  5.3.maximize-memory-throughput.md  5.4.maximize-instruction-throughput.md  5.5.minimize-memory-thrashing.md
cuda-cpp-programming-guide/06.cuda-enabled-gpus/: 6.0.intro.md
cuda-cpp-programming-guide/07.cpp-language-extensions/: 7.1.function-execution-space-specifiers.md
cuda-functions/basic/: BUILD.bazel  kernel.cu  main.cpp
cuda-functions/measurement/: BUILD.bazel  allocMem.cu  getMemInfo.cu  getMemInfo.cuh  main.cc
cuda-functions/memory/: BUILD.bazel  asyncMemManager.cu  asyncMemManager.cuh  main.cc
cuda-functions/utils/: BUILD.bazel  helper.cu  helper.cuh
cuda-programming-masterclass-with-cpp/section01/: 01.very-very-important.md  02.introduction-to-parallel-programming.md
