load("@rules_cuda//cuda:defs.bzl", "cuda_library", "cuda_binary")
load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cuda_library(
    name = "kernel",
    srcs = ["kernel.cu"],
    hdrs = ["kernel.cuh"],
)

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    deps = [":kernel"],
)

cuda_binary(
    name = "hello_gpu",
    srcs = ["hello.cu"],
    deps = [
        # 필요한 의존성 추가
    ],
    visibility = ["//visibility:public"],
)