load("@rules_cuda//cuda:defs.bzl", "cuda_library")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [":getMemInfo"],
)

cuda_library(
    name = "getMemInfo",
    srcs = ["getMemInfo.cu"],
    hdrs = ["getMemInfo.cuh"],
    deps = ["//cuda-functions/utils:helper"],
)
